# signet-protocol-core-console

./: .dockerignore  .gitattributes  .gitignore  COPILOT_PLAN.md  LICENSE  README.md  fly.toml  package.json  turbo.json
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml
.turbo/cache/: 0a9b02c0665efa64-meta.json  0a9b02c0665efa64.tar.zst  428eec4ec55ba95e-meta.json  428eec4ec55ba95e.tar.zst  43ceff70b768ea2b-meta.json  43ceff70b768ea2b.tar.zst  678842a0929c70a7-meta.json  678842a0929c70a7.tar.zst
apps/console/: global-setup.ts  global-teardown.ts  next.config.mjs  package.json  playwright.config.ts  vercel.json  vitest.config.ts
apps/console/.tmp/: e2e-pids.json
apps/console/app/: globals.css  hydrated.tsx  layout.tsx  page.tsx  pageClient.tsx
apps/console/app/compliance/: page.tsx
apps/console/app/metrics/: page.tsx
apps/console/app/sdks/: page.tsx
apps/console/lib/: prom.ts
apps/console/scripts/: e2e.start-core.mjs
apps/console/tests/: home.test.tsx
apps/core-api/: Dockerfile  pyproject.toml
apps/core-api/server/: __main__.py  hel.py  ledger.py  main.py  metrics.py  receipts.py  security.py  settings.py  utils.py
apps/core-api/server/routes/: __init__.py  system.py
apps/core-api/server/routes/v1/: compliance.py  exchange.py  receipts.py
apps/core-api/signet_core_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/core-api/tests/: test_exchange_and_chain.py  test_exchange_metrics.py  test_health.py  test_hel_forward.py  test_idempotency_and_limits.py  test_settings_allowlist.py
docs/: DEPLOY_FLY.md  OVERVIEW.md
(+16 files in other folders)
